--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
     <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Yummy Bootstrap Template - Index</title>
+  <title>Cheesy Pizza</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
